<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GestionUsuarios">

    <TextView
        android:id="@+id/tvTitulo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tvTitulo2"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/etDocumento2"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:ems="10"
        android:hint="@string/etDocumento2"
        android:inputType="text"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etNombres2"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:ems="10"
        android:textSize="16sp"
        android:hint="@string/etNombres"
        android:inputType="text" />

    <EditText
        android:id="@+id/etApellidos2"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:ems="10"
        android:textSize="16sp"
        android:hint="@string/etApellidos"
        android:inputType="text" />

    <EditText
        android:id="@+id/etUsuario2"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:ems="10"
        android:textSize="16sp"
        android:hint="@string/etUsuario"
        android:inputType="text" />

    <EditText
        android:id="@+id/etContra2"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:ems="10"
        android:textSize="16sp"
        android:hint="@string/etContra"
        android:inputType="text" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp">

        <Button
            android:id="@+id/btnBuscarUsu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/borde_boton"
            android:layout_weight="1"
            android:text="@string/btnBuscarUsu" />

        <Button
            android:id="@+id/btnEditarUsu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/borde_boton"
            android:layout_weight="1"
            android:text="@string/btnEditarUsu" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnInactivar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/borde_boton"
            android:layout_weight="1"
            android:text="@string/btnInactivar" />

        <Button
            android:id="@+id/btnVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/borde_boton"
            android:layout_weight="1"
            android:text="@string/btnVolver" />
    </TableRow>

    <ListView
        android:id="@+id/lvListInactivos"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>